add link for move to sign up

--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -34,4 +34,13 @@
   &__button {
     @include button;
   }
+  &__linkToSignUp {
+    align-self: center;
+    color: $font-color;
+    font-size: 0.8rem;
+    margin-top: 30px;
+    &:hover {
+      color: $pink;
+    }
+  }
 }
