add color 'background' to _variable.scss

--- a/src/css/SignUp.scss
+++ b/src/css/SignUp.scss
@@ -1,6 +1,6 @@
 .signUpContainer {
   align-items: center;
-  background-color: #eee;
+  background-color: $background;
   display: flex;
   flex-direction: column;
   height: 100vh;
