--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -2,6 +2,7 @@
 $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 
 // colors
+$background: #eee;
 $border-color: #ccc;
 $font-color: #666;
 $pink: #d81b60;
