--- a/src/css/SignIn.scss
+++ b/src/css/SignIn.scss
@@ -1,6 +1,6 @@
 .signInContainer {
   align-items: center;
-  background-color: #eee;
+  background-color: $background;
   display: flex;
   flex-direction: column;
   height: 100vh;
