create component 'Header'

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,5 +14,6 @@ code {
 
 @import './css/variables';
 @import './css/mixin';
+@import './css/Header';
 @import './css/SignIn';
 @import './css/SignUp';
