create main screen container

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@ code {
 
 @import './css/variables';
 @import './css/mixin';
+@import './css/App';
 @import './css/BoardIndex';
 @import './css/Header';
 @import './css/SignIn';
