create component 'List'

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@ code {
 @import './css/BoardIndex';
 @import './css/Card';
 @import './css/Header';
+@import './css/List';
 @import './css/SignIn';
 @import './css/SignUp';
 @import './css/ToolBar';
