create component 'Board'

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@ code {
 @import './css/variables';
 @import './css/mixin';
 @import './css/App';
+@import './css/Board';
 @import './css/BoardIndex';
 @import './css/Card';
 @import './css/Header';
