create dialog component

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -8,6 +8,9 @@ $toolbar-height: 40px;
 $background: #eee;
 $border-color: #ccc;
 $font-color: #666;
+$indigo: #283593;
 $hover-overlay: rgba(0, 0, 0, 0.3);
 $overlay: rgba(0, 0, 0, 0.4);
 $pink: #d81b60;
+$teal: #00897b;
+$teal-lighten: #26a69a;
