--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@ code {
 @import './css/Board';
 @import './css/BoardIndex';
 @import './css/Card';
+@import './css/Dialog';
 @import './css/Header';
 @import './css/List';
 @import './css/SignIn';
