--- a/src/css/BoardIndex.scss
+++ b/src/css/BoardIndex.scss
@@ -2,11 +2,10 @@
   box-sizing: border-box;
   display: grid;
   gap: 20px;
-  grid-auto-rows: 120px;
-  grid-template-columns: repeat(auto-fit, 230px);
+  grid-auto-rows: 140px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   height: calc(100vh - #{$header-height});
-  justify-content: center;
-  padding: 20px 20px 0;
+  padding: 20px 50px 0;
   width: 100%;
 }
 
@@ -14,6 +13,7 @@
   background-color: white;
   border-radius: 3px;
   box-shadow: $box-shadow;
+  box-sizing: border-box;
   color: $font-color;
   cursor: pointer;
   display: flex;
