add style 'board-card' to mixin

--- a/src/css/BoardIndex.scss
+++ b/src/css/BoardIndex.scss
@@ -10,19 +10,7 @@
 }
 
 .boardIndexCard {
-  background-color: white;
-  border-radius: 3px;
-  box-shadow: $box-shadow;
-  box-sizing: border-box;
-  color: $font-color;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  padding: 10px 20px;
-  text-decoration: none;
-  &:hover {
-    color: $pink;
-  }
+  @include board-card();
 }
 
 .boardIndexCardTop {
