--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -37,3 +37,19 @@
     color: $pink;
   }
 }
+
+@mixin board-card() {
+  background-color: white;
+  border-radius: 3px;
+  box-shadow: $box-shadow;
+  box-sizing: border-box;
+  color: $font-color;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+  text-decoration: none;
+  &:hover {
+    color: $pink;
+  }
+}
