create component 'BoardForm'

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@ code {
 @import './css/mixin';
 @import './css/App';
 @import './css/Board';
+@import './css/BoardForm';
 @import './css/BoardIndex';
 @import './css/Card';
 @import './css/Dialog';
