--- a/src/css/BoardForm.scss
+++ b/src/css/BoardForm.scss
@@ -49,6 +49,10 @@
       background-color: $teal-lighten;
       color: white;
     }
+    &:disabled {
+      background-color: #999;
+      cursor: not-allowed;
+    }
   }
   &__cancel {
     @include small-button();
