--- a/src/css/BoardIndex.scss
+++ b/src/css/BoardIndex.scss
@@ -5,8 +5,14 @@
   grid-auto-rows: 140px;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   height: calc(100vh - #{$header-height});
-  padding: 20px 50px 0;
+  overflow-x: scroll;
+  padding: 20px 50px;
   width: 100%;
+  &::after {
+    content: '';
+    grid-column-start: 1;
+    height: 1px;
+  }
 }
 
 .boardIndexCard {
