--- a/src/css/ToolBar.scss
+++ b/src/css/ToolBar.scss
@@ -6,9 +6,13 @@
   height: $toolbar-height;
   padding: 0 20px;
   &__title {
+    cursor: pointer;
     font-size: 1.1rem;
     font-weight: bold;
     margin-right: 20px;
+    &:hover {
+      color: $pink;
+    }
   }
 }
 
