create component 'LabelEdit'

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,8 @@ code {
 @import './css/Dialog';
 @import './css/Header';
 @import './css/Label';
+@import './css/LabelEdit';
+@import './css/LabelEditRow';
 @import './css/LabelIndex';
 @import './css/List';
 @import './css/SignIn';
