create component 'LabelForm'

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@ code {
 @import './css/Label';
 @import './css/LabelEdit';
 @import './css/LabelEditRow';
+@import './css/LabelForm';
 @import './css/LabelIndex';
 @import './css/List';
 @import './css/SignIn';
