--- a/src/css/LabelEditRow.scss
+++ b/src/css/LabelEditRow.scss
@@ -4,6 +4,7 @@
   height: 45px;
   &__icon {
     border-radius: 50%;
+    cursor: pointer;
     height: 30px;
     margin-right: 10px;
     position: relative;
