create ListForm component

--- a/src/css/List.scss
+++ b/src/css/List.scss
@@ -6,19 +6,23 @@
   flex-direction: column;
   margin-right: 10px;
   max-height: 100%;
-  padding: 10px;
+  padding: 5px 10px 10px;
   min-width: $list-width;
 }
 
 .listHeader {
+  align-items: center;
   color: white;
   display: flex;
   justify-content: space-between;
+  min-height: 30px;
   margin-bottom: 5px;
   padding: 5px 5px;
   &__title {
     cursor: pointer;
     font-weight: bold;
+    flex: 1;
+    margin-right: 10px;
   }
   &__icon {
     cursor: pointer;
