--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@ code {
 @import './css/LabelIndex';
 @import './css/List';
 @import './css/ListForm';
+@import './css/ListMenu';
 @import './css/ListNameForm';
 @import './css/SignIn';
 @import './css/SignUp';
