--- a/src/css/List.scss
+++ b/src/css/List.scss
@@ -18,6 +18,7 @@
   min-height: 30px;
   margin-bottom: 5px;
   padding: 5px 5px;
+  position: relative;
   &__title {
     cursor: pointer;
     font-weight: bold;
