implement create card

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,7 @@ code {
 @import './css/BoardIndex';
 @import './css/BoardNameForm';
 @import './css/Card';
+@import './css/CardForm';
 @import './css/ColorPicker';
 @import './css/Dialog';
 @import './css/Header';
