--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,9 +3,10 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 $header-height: 30px;
 $list-width: 270px;
 $toolbar-height: 40px;
+$card-detail-width: 700px;
 
 // colors
-$background: #eee;
+$background: #f6f6f6;
 $border-color: #ccc;
 $font-color: #666;
 $indigo: #283593;
