create component 'CardTitle'

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ code {
 @import './css/Card';
 @import './css/CardDetail';
 @import './css/CardForm';
+@import './css/CardTitle';
 @import './css/ColorPicker';
 @import './css/Dialog';
 @import './css/Header';
