add color to _variables.scss

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -15,3 +15,5 @@ $overlay: rgba(0, 0, 0, 0.4);
 $pink: #d81b60;
 $teal: #00897b;
 $teal-lighten: #26a69a;
+$card-element-background: #eee;
+$card-element-hover-background: #ddd;
