--- a/src/css/CardDetail.scss
+++ b/src/css/CardDetail.scss
@@ -48,6 +48,7 @@
 
 .cardDetailMain {
   flex: 1;
+  padding: 0 10px;
 }
 
 .cardDetailRow {
@@ -70,12 +71,12 @@
     padding: 5px;
   }
   &__icon {
-    background-color: #eee;
+    background-color: $card-element-background;
     border-radius: 3px;
     cursor: pointer;
     padding: 5px 8px;
     &:hover {
-      background-color: #ddd;
+      background-color: $card-element-hover-background;
     }
   }
 }
@@ -90,7 +91,6 @@
   }
   @media (max-width: 500px) {
     display: grid;
-    // column-gap: 10px;
     grid-template-columns: 1fr;
     width: 100%;
   }
@@ -98,7 +98,7 @@
 
 .cardDetailSideBarRow {
   align-items: center;
-  background-color: #eee;
+  background-color: $card-element-background;
   border-radius: 3px;
   cursor: pointer;
   display: flex;
@@ -106,13 +106,10 @@
   height: 35px;
   margin-bottom: 10px;
   padding: 0 5px;
-  @media (max-width: $card-detail-width) {
-    // width: 50%;
-  }
   &__icon {
     margin-right: 5px;
   }
   &:hover {
-    background-color: #ddd;
+    background-color: $card-element-hover-background;
   }
 }
