create component 'FlexTextArea'

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@ code {
 @import './css/CardTitle';
 @import './css/ColorPicker';
 @import './css/Dialog';
+@import './css/FlexTextArea';
 @import './css/Header';
 @import './css/Label';
 @import './css/LabelEdit';
