--- a/src/css/CardDetail.scss
+++ b/src/css/CardDetail.scss
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   height: 80vh;
+  overflow-y: scroll;
   padding: 20px;
   width: $card-detail-width;
   @media (max-width: $card-detail-width) {
