--- a/src/css/FlexTextArea.scss
+++ b/src/css/FlexTextArea.scss
@@ -1,16 +1,18 @@
 .flexTextArea {
-  line-height: 1.2rem;
+  display: flex;
+  font-size: 0.9rem;
   margin-bottom: 10px;
   position: relative;
   &__dummy {
     border: 1px solid;
     border-radius: 5px;
     box-sizing: border-box;
-    line-height: 1.2rem;
+    font: inherit;
+    line-height: 1.3rem;
     min-height: 100px;
     overflow: hidden;
     overflow-wrap: break-word;
-    padding-left: 5px;
+    padding: 5px;
     visibility: hidden;
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -18,8 +20,10 @@
   &__textarea {
     @include text-field();
     box-sizing: border-box;
+    font: inherit;
     height: 100%;
-    padding-left: 5px;
+    line-height: 1.3rem;
+    padding: 5px;
     position: absolute;
     top: 0;
     left: 0;
