--- a/src/css/CardDescriptionText.scss
+++ b/src/css/CardDescriptionText.scss
@@ -1,13 +1,17 @@
 .cardDescriptionText__text {
+  border: solid 1px $background;
   border-radius: 3px;
-  padding: 5px 10px;
+  font-size: 0.9rem;
+  line-height: 1.3rem;
+  padding: 5px;
+  white-space: pre-wrap;
 }
 
 .cardDescriptionText__placeholder {
   background-color: $card-element-background;
   border-radius: 3px;
   cursor: pointer;
-  padding: 5px 10px;
+  padding: 5px;
   &:hover {
     background-color: $card-element-hover-background;
   }
