--- a/src/css/CardDescriptionText.scss
+++ b/src/css/CardDescriptionText.scss
@@ -2,9 +2,33 @@
   border: solid 1px $background;
   border-radius: 3px;
   font-size: 0.9rem;
-  line-height: 1.3rem;
+  line-height: 1.4rem;
   padding: 5px;
   white-space: pre-wrap;
+  img {
+    max-width: 100%;
+  }
+  code {
+    background-color: #fff;
+    border: solid 1px #ccc;
+    color: $pink;
+    font-size: 0.8rem;
+    padding: 1px 2px;
+  }
+  pre {
+    background-color: #e9e9e9;
+    border-radius: 3px;
+    padding: 10px;
+    code {
+      background-color: inherit;
+      border: none;
+      color: $font-color;
+      font-size: 0.7rem;
+      line-height: 1.2rem;
+      padding: 0;
+      white-space: pre-wrap;
+    }
+  }
 }
 
 .cardDescriptionText__placeholder {
