--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -53,3 +53,20 @@
     color: $pink;
   }
 }
+
+@mixin card-sidebar-row() {
+  align-items: center;
+  background-color: $card-element-background;
+  border-radius: 3px;
+  cursor: pointer;
+  display: flex;
+  font-size: 0.9rem;
+  height: 35px;
+  padding: 0 5px;
+  &__icon {
+    margin-right: 5px;
+  }
+  &:hover {
+    background-color: $card-element-hover-background;
+  }
+}
