improve ListName component

--- a/src/index.scss
+++ b/src/index.scss
@@ -40,7 +40,7 @@ code {
 @import './css/List';
 @import './css/ListForm';
 @import './css/ListMenu';
-@import './css/ListNameForm';
+@import './css/ListName';
 @import './css/SignIn';
 @import './css/SignUp';
 @import './css/ToolBar';
