create component 'ButtonSubmit' and 'ButtonCancel'

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,8 @@ code {
 @import './css/BoardForm';
 @import './css/BoardIndex';
 @import './css/BoardNameForm';
+@import './css/ButtonCancel';
+@import './css/ButtonSubmit';
 @import './css/Card';
 @import './css/CardDescription';
 @import './css/CardDescriptionForm';
