--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,7 @@ code {
 @import './css/CardDetail';
 @import './css/CardForm';
 @import './css/CardLabel';
+@import './css/CardLabelContainer';
 @import './css/CardLabelForm';
 @import './css/CardLabelFormButton';
 @import './css/CardLabelFormRow';
