--- a/src/css/CardDescriptionText.scss
+++ b/src/css/CardDescriptionText.scss
@@ -1,6 +1,7 @@
 .cardDescriptionText__text {
   border: solid 1px $background;
   border-radius: 3px;
+  cursor: pointer;
   font-size: 0.9rem;
   line-height: 1.4rem;
   padding: 5px;
