--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@ code {
 @import './css/CardDescriptionText';
 @import './css/CardDetail';
 @import './css/CardForm';
+@import './css/CardIndexContainer';
 @import './css/CardLabel';
 @import './css/CardLabelContainer';
 @import './css/CardLabelForm';
