edit layout for an add label button

--- a/src/css/LabelIndex.scss
+++ b/src/css/LabelIndex.scss
@@ -17,6 +17,9 @@
   &:hover {
     background-color: $hover-overlay;
   }
+  &__text {
+    font-size: 0.9rem;
+  }
   &__icon {
     margin-right: 5px;
   }
