edit layout for toolbar and header

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -1,6 +1,8 @@
 .header {
   background-color: #ccc;
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
   height: $header-height;
   padding: 0 20px;
   width: 100%;
@@ -15,8 +17,32 @@
   &__toIndex {
     color: $font-color;
     font-size: 1.2rem;
+    position: relative;
     &:hover {
       color: $pink;
+      &::after {
+        @include hover-text();
+        content: 'ボード一覧に戻る';
+        position: absolute;
+        top: 30px;
+        left: 0;
+      }
     }
+  }
+}
+
+.openLabelEditButton {
+  align-items: center;
+  color: $font-color;
+  cursor: pointer;
+  display: flex;
+  font-size: 0.8rem;
+  margin: 3px 0;
+  text-decoration: underline;
+  &:hover {
+    color: $pink;
+  }
+  &__text {
+    margin-left: 3px;
   }
 }
