--- a/src/css/Label.scss
+++ b/src/css/Label.scss
@@ -2,24 +2,22 @@
   cursor: pointer;
   margin-right: 10px;
   position: relative;
+  margin-bottom: 3px;
   &__icon {
     border-radius: 50%;
-    height: 100%;
-    width: calc(#{$toolbar-height} * 0.7);
+    height: 30px;
+    width: 30px;
   }
   &__name {
-    background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 3px;
-    color: white;
-    font-size: 0.8rem;
-    padding: 2px 4px;
+    @include hover-text();
+    max-width: 300px;
+    overflow: hidden;
     position: absolute;
-    top: calc(#{$toolbar-height} * 0.75);
+    top: 35px;
     left: 50%;
+    text-overflow: ellipsis;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
-    white-space: nowrap;
-    width: fit-content;
   }
 }
