--- a/src/css/LabelEdit.scss
+++ b/src/css/LabelEdit.scss
@@ -2,6 +2,7 @@
   background-color: white;
   box-sizing: border-box;
   box-shadow: $box-shadow;
+  color: $font-color;
   display: flex;
   flex-direction: column;
   height: 100vh;
