--- a/src/css/Board.scss
+++ b/src/css/Board.scss
@@ -1,4 +1,6 @@
 .boardContainer {
+  display: flex;
+  flex-direction: column;
   height: calc(100vh - #{$header-height});
   width: 100%;
 }
@@ -7,10 +9,9 @@
   align-items: flex-start;
   box-sizing: border-box;
   display: flex;
-  height: calc(100vh - #{$header-height} - #{$toolbar-height} );
+  flex: 1;
   overflow-x: scroll;
   padding: 5px 20px 20px;
-  width: 100%;
   &::after {
     content: '';
     height: 1px;
