--- a/src/css/ToolBar.scss
+++ b/src/css/ToolBar.scss
@@ -3,13 +3,19 @@
   box-sizing: border-box;
   color: $font-color;
   display: flex;
-  height: $toolbar-height;
-  padding: 0 20px;
+  flex-wrap: wrap;
+  padding: 5px 20px;
+  width: 100%;
   &__title {
     cursor: pointer;
     font-size: 1.1rem;
     font-weight: bold;
     margin-right: 20px;
+    overflow: hidden;
+    padding: 5px 0;
+    text-overflow: ellipsis;
+    word-wrap: none;
+    white-space: nowrap;
     &:hover {
       color: $pink;
     }
