--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -70,3 +70,15 @@
     background-color: $card-element-hover-background;
   }
 }
+
+@mixin hover-text() {
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 3px;
+  color: white;
+  font-size: 0.8rem;
+  line-height: 1rem;
+  padding: 2px 4px;
+  width: fit-content;
+  white-space: nowrap;
+  z-index: 10;
+}
