create component 'FlexTextField'

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,6 @@ code {
 @import './css/Board';
 @import './css/BoardForm';
 @import './css/BoardIndex';
-@import './css/BoardNameForm';
 @import './css/ButtonCancel';
 @import './css/ButtonSubmit';
 @import './css/Card';
@@ -40,6 +39,7 @@ code {
 @import './css/ColorPicker';
 @import './css/Dialog';
 @import './css/FlexTextArea';
+@import './css/FlexTextField';
 @import './css/Header';
 @import './css/Label';
 @import './css/LabelEdit';
