--- a/src/css/ToolBar.scss
+++ b/src/css/ToolBar.scss
@@ -4,15 +4,18 @@
   color: $font-color;
   display: flex;
   flex-wrap: wrap;
-  padding: 5px 20px;
+  padding: 5px 20px 0;
   width: 100%;
   &__title {
+    border: solid 1px transparent;
     cursor: pointer;
     font-size: 1.1rem;
     font-weight: bold;
+    line-height: 1.2rem;
+    margin-bottom: 5px;
     margin-right: 20px;
     overflow: hidden;
-    padding: 5px 0;
+    padding: 5px;
     text-overflow: ellipsis;
     word-wrap: none;
     white-space: nowrap;
