--- a/src/css/CardLabelForm.scss
+++ b/src/css/CardLabelForm.scss
@@ -3,10 +3,10 @@
   border-radius: 3px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
   padding: 10px 20px;
-  position: absolute;
-  top: 30px;
-  left: 0;
+  position: fixed;
   width: 300px;
   z-index: 15;
 }
@@ -26,4 +26,10 @@
 }
 
 .cardLabelFormList {
+  flex: 1;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
