--- a/src/css/Label.scss
+++ b/src/css/Label.scss
@@ -4,9 +4,19 @@
   position: relative;
   margin-bottom: 3px;
   &__icon {
+    align-items: center;
     border-radius: 50%;
+    display: flex;
     height: 30px;
+    justify-content: center;
     width: 30px;
+    &--checked {
+      @extend .label__icon;
+      &::after {
+        color: white;
+        content: '✔︎';
+      }
+    }
   }
   &__name {
     @include hover-text();
