fix color picker style

--- a/src/css/ColorPicker.scss
+++ b/src/css/ColorPicker.scss
@@ -1,6 +1,7 @@
 .colorPicker {
   background-color: white;
   border-radius: 3px;
+  box-sizing: border-box;
   cursor: default;
   display: flex;
   overflow-x: scroll;
