create component for search card

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -38,6 +38,7 @@
   display: flex;
   font-size: 0.8rem;
   margin: 3px 0;
+  min-width: fit-content;
   text-decoration: underline;
   &:hover {
     color: $pink;
