--- a/src/index.scss
+++ b/src/index.scss
@@ -51,6 +51,11 @@ code {
 @import './css/ListMenu';
 @import './css/ListMenuButton';
 @import './css/ListName';
+@import './css/SearchCard';
+@import './css/SearchCardForm';
+@import './css/SearchCardIndex';
+@import './css/SearchCardInfo';
+@import './css/SearchCardTextField';
 @import './css/SignIn';
 @import './css/SignUp';
 @import './css/ToolBar';
