improve css file structure

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,48 +14,64 @@ code {
 
 @import './css/variables';
 @import './css/mixin';
-@import './css/App';
-@import './css/Board';
-@import './css/BoardForm';
-@import './css/BoardIndex';
-@import './css/ButtonCancel';
-@import './css/ButtonSubmit';
-@import './css/Card';
-@import './css/CardDescription';
-@import './css/CardDescriptionForm';
-@import './css/CardDescriptionText';
-@import './css/CardDetail';
-@import './css/CardForm';
-@import './css/CardIndexContainer';
-@import './css/CardLabel';
-@import './css/CardLabelContainer';
-@import './css/CardLabelForm';
-@import './css/CardLabelFormButton';
-@import './css/CardLabelFormRow';
-@import './css/CardLabelSmall';
-@import './css/CardSideBar';
-@import './css/CardSideBarDeleteButton';
-@import './css/CardTitle';
-@import './css/ColorPicker';
-@import './css/Dialog';
-@import './css/FlexTextArea';
-@import './css/FlexTextField';
-@import './css/Header';
-@import './css/Label';
-@import './css/LabelEdit';
-@import './css/LabelEditRow';
-@import './css/LabelForm';
-@import './css/LabelIndex';
-@import './css/List';
-@import './css/ListForm';
-@import './css/ListMenu';
-@import './css/ListMenuButton';
-@import './css/ListName';
-@import './css/SearchCard';
-@import './css/SearchCardForm';
-@import './css/SearchCardIndex';
-@import './css/SearchCardInfo';
-@import './css/SearchCardTextField';
-@import './css/SignIn';
-@import './css/SignUp';
-@import './css/ToolBar';
+
+// app
+@import './css/app/App';
+
+// board
+@import './css/board/Board';
+@import './css/board/BoardForm';
+@import './css/board/BoardIndex';
+
+// card
+@import './css/card/Card';
+@import './css/card/CardDescription';
+@import './css/card/CardDescriptionForm';
+@import './css/card/CardDescriptionText';
+@import './css/card/CardDetail';
+@import './css/card/CardForm';
+@import './css/card/CardIndexContainer';
+@import './css/card/CardLabel';
+@import './css/card/CardLabelContainer';
+@import './css/card/CardLabelForm';
+@import './css/card/CardLabelFormButton';
+@import './css/card/CardLabelFormRow';
+@import './css/card/CardLabelSmall';
+@import './css/card/CardSideBar';
+@import './css/card/CardSideBarDeleteButton';
+@import './css/card/CardTitle';
+
+// common
+@import './css/common/ButtonCancel';
+@import './css/common/ButtonSubmit';
+@import './css/common/ColorPicker';
+@import './css/common/Dialog';
+@import './css/common/FlexTextArea';
+@import './css/common/FlexTextField';
+@import './css/common/Header';
+@import './css/common/ToolBar';
+
+// label
+@import './css/label/Label';
+@import './css/label/LabelEdit';
+@import './css/label/LabelEditRow';
+@import './css/label/LabelForm';
+@import './css/label/LabelIndex';
+
+// list
+@import './css/list/List';
+@import './css/list/ListForm';
+@import './css/list/ListMenu';
+@import './css/list/ListMenuButton';
+@import './css/list/ListName';
+
+// search
+@import './css/search/SearchCard';
+@import './css/search/SearchCardForm';
+@import './css/search/SearchCardIndex';
+@import './css/search/SearchCardInfo';
+@import './css/search/SearchCardTextField';
+
+// session
+@import './css/session/SignIn';
+@import './css/session/SignUp';
