create component CheckListForm

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,6 +43,9 @@ code {
 @import './css/card/CardSideBarDeleteButton';
 @import './css/card/CardTitle';
 
+// check list
+@import './css/check_list/CheckListForm';
+
 // common
 @import './css/common/ButtonCancel';
 @import './css/common/ButtonSubmit';
