--- a/src/css/card/CardDescriptionText.scss
+++ b/src/css/card/CardDescriptionText.scss
@@ -6,6 +6,9 @@
   line-height: 1.4rem;
   padding: 5px;
   white-space: pre-wrap;
+  p {
+    margin-block-start: 0;
+  }
   img {
     max-width: 100%;
   }
