add style 'card-detail-header'

--- a/src/css/card/CardLabelContainer.scss
+++ b/src/css/card/CardLabelContainer.scss
@@ -1,8 +1,7 @@
 .cardLabelContainer {
   @include card-detail-row();
   &__label {
-    font-weight: bold;
-    margin-bottom: 5px;
+    @include card-detail-header-text();
   }
 }
 
