--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -86,3 +86,13 @@
 @mixin card-detail-row() {
   margin-bottom: 15px;
 }
+
+@mixin card-detail-header() {
+  align-items: center;
+  display: flex;
+  margin-bottom: 5px;
+}
+
+@mixin card-detail-header-text() {
+  font-weight: bold;
+}
