--- a/src/css/card/CardDescription.scss
+++ b/src/css/card/CardDescription.scss
@@ -3,11 +3,9 @@
 }
 
 .cardDescriptionHeader {
-  align-items: center;
-  display: flex;
-  margin-bottom: 5px;
+  @include card-detail-header();
   &__label {
-    font-weight: bold;
+    @include card-detail-header-text();
     margin-right: 8px;
   }
   &__icon {
