create component 'ButtonNoneBorder'

--- a/src/index.scss
+++ b/src/index.scss
@@ -48,6 +48,7 @@ code {
 
 // common
 @import './css/common/ButtonCancel';
+@import './css/common/ButtonNoneBorder';
 @import './css/common/ButtonSubmit';
 @import './css/common/ColorPicker';
 @import './css/common/Dialog';
