create component 'CheckList'

--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,7 @@ code {
 @import './css/card/CardTitle';
 
 // check list
+@import './css/check_list/CheckList';
 @import './css/check_list/CheckListForm';
 
 // common
