add props for FlexTextArea component

--- a/src/css/common/FlexTextArea.scss
+++ b/src/css/common/FlexTextArea.scss
@@ -13,6 +13,7 @@
     overflow: hidden;
     overflow-wrap: break-word;
     padding: 5px;
+    padding-bottom: 1.8rem;
     visibility: hidden;
     white-space: pre-wrap;
     word-wrap: break-word;
