--- a/src/css/check_list_item/CheckListItem.scss
+++ b/src/css/check_list_item/CheckListItem.scss
@@ -7,6 +7,11 @@
   white-space: pre-wrap;
   &__name {
     flex: 1;
+    &--checked {
+      @extend .checkListItem__name;
+      color: #999;
+      text-decoration: line-through;
+    }
   }
   &__delete {
     padding: 3px;
