--- a/src/css/check_list_item/Checkbox.scss
+++ b/src/css/check_list_item/Checkbox.scss
@@ -1,4 +1,24 @@
 .checkbox {
   border: solid 2px $font-color;
+  border-radius: 3px;
+  height: 18px;
   margin-right: 10px;
+  outline: none;
+  text-align: center;
+  width: 18px;
+  &:hover {
+    opacity: 0.6;
+  }
+  &--checked {
+    @extend .checkbox;
+    background-color: $pink;
+    border: none;
+    padding: 2px;
+  }
+  &__icon {
+    visibility: hidden;
+    &--checked {
+      color: white;
+    }
+  }
 }
