implement update check list item name

--- a/src/index.scss
+++ b/src/index.scss
@@ -52,6 +52,7 @@ code {
 @import './css/check_list_item/Checkbox';
 @import './css/check_list_item/CheckListItem';
 @import './css/check_list_item/CheckListItemForm';
+@import './css/check_list_item/CheckListItemName';
 
 // common
 @import './css/common/ButtonCancel';
