implement check list progress bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,7 @@ code {
 // check list
 @import './css/check_list/CheckList';
 @import './css/check_list/CheckListForm';
+@import './css/check_list/CheckListProgressBar';
 @import './css/check_list/CheckListTitleForm';
 
 // check list item
