implement CardStatus component

--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,8 @@ code {
 @import './css/card/CardMenuForm';
 @import './css/card/CardSideBar';
 @import './css/card/CardSideBarButton';
+@import './css/card/CardStatus';
+@import './css/card/CardStatusIndex';
 @import './css/card/CardTitle';
 
 // check list
