create file component

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,6 +68,9 @@ code {
 @import './css/common/Header';
 @import './css/common/ToolBar';
 
+@import './css/file/File';
+@import './css/file/FileIndex';
+
 // label
 @import './css/label/Label';
 @import './css/label/LabelEdit';
