implement delete file

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,7 +68,9 @@ code {
 @import './css/common/Header';
 @import './css/common/ToolBar';
 
+// file
 @import './css/file/File';
+@import './css/file/FileDeleteButton';
 @import './css/file/FileIndex';
 
 // label
