create 404 not found page

--- a/src/index.scss
+++ b/src/index.scss
@@ -58,6 +58,7 @@ code {
 @import './css/check_list_item/CheckListItemName';
 
 // common
+@import './css/common/404';
 @import './css/common/ButtonCancel';
 @import './css/common/ButtonNoneBorder';
 @import './css/common/ButtonSubmit';
