--- a/src/index.scss
+++ b/src/index.scss
@@ -76,6 +76,7 @@ code {
 @import './css/file/FileIndex';
 
 // label
+@import './css/label/EditLabelButton';
 @import './css/label/Label';
 @import './css/label/LabelEdit';
 @import './css/label/LabelEditRow';
