create component Lightbox

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,6 +68,7 @@ code {
 @import './css/common/FlexTextArea';
 @import './css/common/FlexTextField';
 @import './css/common/Header';
+@import './css/common/Lightbox';
 @import './css/common/ToolBar';
 
 // file
