--- a/src/index.scss
+++ b/src/index.scss
@@ -71,6 +71,9 @@ code {
 @import './css/common/Lightbox';
 @import './css/common/ToolBar';
 
+// cover
+@import './css/cover/Cover';
+
 // file
 @import './css/file/File';
 @import './css/file/FileDeleteButton';
