--- a/src/css/card/CardDetail.scss
+++ b/src/css/card/CardDetail.scss
@@ -20,28 +20,42 @@
   flex-direction: column;
   height: 80vh;
   overflow-y: scroll;
-  padding: 20px;
+  padding-bottom: 20px;
+  position: relative;
   width: $card-detail-width;
   @media (max-width: $card-detail-width) {
     width: 100%;
   }
 }
 
+.cardDetailCloseButton {
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 1.2rem;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  text-align: center;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    color: $pink;
+  }
+}
+
 .cardDetailHeader {
   align-items: center;
   display: flex;
-  height: 40px;
-  margin-bottom: 10px;
-  &__icon {
-    font-size: 1.2rem;
-    cursor: pointer;
-    padding: 0 10px;
-  }
+  margin: 15px 20px 20px;
+  padding-right: 35px;
 }
 
 .cardDetail {
   display: flex;
   flex: 1;
+  margin: 0 20px;
   @media (max-width: $card-detail-width) {
     flex-direction: column;
   }
