--- a/src/index.scss
+++ b/src/index.scss
@@ -70,6 +70,7 @@ code {
 @import './css/common/FlexTextField';
 @import './css/common/Header';
 @import './css/common/Lightbox';
+@import './css/common/Loading';
 @import './css/common/ToolBar';
 
 // cover
