implement redirect to sign in page

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,7 @@ code {
 @import './css/mixin';
 
 // app
-@import './css/app/App';
+@import './css/app/ProtectedPage';
 
 // board
 @import './css/board/Board';
