create user profile component

--- a/src/index.scss
+++ b/src/index.scss
@@ -106,4 +106,8 @@ code {
 
 // session
 @import './css/session/SignIn';
+@import './css/session/SignOutButton';
 @import './css/session/SignUp';
+@import './css/session/UserProfile';
+@import './css/session/UserProfileButton';
+@import './css/session/UserProfileContainer';
