--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -47,6 +47,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  height: 120px;
   padding: 10px 20px;
   text-decoration: none;
   &:hover {
