--- a/src/css/board/BoardForm.scss
+++ b/src/css/board/BoardForm.scss
@@ -6,6 +6,9 @@
   color: white;
   flex-direction: row;
   justify-content: center;
+  &:hover {
+    color: $pink;
+  }
   &__label {
     margin-right: 5px;
   }
