--- a/src/css/board/BoardIndexCard.scss
+++ b/src/css/board/BoardIndexCard.scss
@@ -1,10 +1,21 @@
 .boardIndexCard {
   @include board-card();
   &__title {
+    font-weight: 500;
+    margin-top: 10px;
     overflow: hidden;
-    padding-top: 10px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
   }
+}
+
+.boardIndexCardOverlay {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
