implement display background image

--- a/src/css/board/DeleteBoardButton.scss
+++ b/src/css/board/DeleteBoardButton.scss
@@ -1,6 +1,6 @@
 .deleteBoardButton {
   align-items: center;
-  color: $font-color;
+  color: white;
   cursor: pointer;
   display: flex;
   font-size: 0.8rem;
