--- a/src/css/common/Header.scss
+++ b/src/css/common/Header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #ccc;
+  background-color: rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
@@ -15,7 +15,7 @@
   padding: 0 3px;
   width: fit-content;
   &__toIndex {
-    color: $font-color;
+    color: white;
     font-size: 1.2rem;
     position: relative;
     &:hover {
