--- a/src/css/label/EditLabelButton.scss
+++ b/src/css/label/EditLabelButton.scss
@@ -1,6 +1,6 @@
 .editLabelButton {
   align-items: center;
-  color: $font-color;
+  color: white;
   cursor: pointer;
   display: flex;
   font-size: 0.8rem;
