--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ code {
 @import './css/board/BoardForm';
 @import './css/board/BoardIndex';
 @import './css/board/BoardIndexCard';
+@import './css/board/BoardWrapper';
 @import './css/board/DeleteBoardButton';
 
 // card
