refactor BoardForm component

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@ code {
 @import './css/board/BoardIndexCard';
 @import './css/board/BoardWrapper';
 @import './css/board/DeleteBoardButton';
+@import './css/board/NewBoardCard';
 
 // card
 @import './css/card/Card';
