create component AngleButton

--- a/src/index.scss
+++ b/src/index.scss
@@ -62,6 +62,7 @@ code {
 
 // common
 @import './css/common/404';
+@import './css/common/AngleButton';
 @import './css/common/ButtonCancel';
 @import './css/common/ButtonLight';
 @import './css/common/ButtonNoneBorder';
