create component for new background image

--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -48,7 +48,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  height: 120px;
+  height: $board-card-height;
   padding: 10px 20px;
   position: relative;
   text-decoration: none;
