--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,10 @@ code {
 // app
 @import './css/app/ProtectedPage';
 
+// background image
+@import './css/background-image/NewBackgroundImageIcon';
+@import './css/background-image/NewBackgroundImageIndex';
+
 // board
 @import './css/board/Board';
 @import './css/board/BoardForm';
