--- a/src/css/board/BoardIndex.scss
+++ b/src/css/board/BoardIndex.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: grid;
   gap: 20px;
-  grid-auto-rows: 120px;
+  grid-auto-rows: $board-card-height;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   height: calc(100vh - #{$header-height});
   overflow-x: scroll;
