implement create board with bacnground image

--- a/src/css/background-image/NewBackgroundImageIcon.scss
+++ b/src/css/background-image/NewBackgroundImageIcon.scss
@@ -1,10 +1,25 @@
 .newBackgroundImageIcon {
+  cursor: pointer;
   height: 35px;
   margin: 0 2px;
+  position: relative;
   &__image {
     background-size: cover;
     border-radius: 3px;
     height: 100%;
     width: 100%;
   }
+}
+
+.newBackgroundImageIconOverlay {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
