--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -40,6 +40,7 @@
 
 @mixin board-card() {
   background-color: white;
+  background-position: center;
   background-size: cover;
   border-radius: 3px;
   box-shadow: $box-shadow;
