create component SlideInMenu

--- a/src/index.scss
+++ b/src/index.scss
@@ -78,6 +78,7 @@ code {
 @import './css/common/Header';
 @import './css/common/Lightbox';
 @import './css/common/Loading';
+@import './css/common/SlideInMenu';
 @import './css/common/ToolBar';
 
 // cover
