--- a/src/css/common/ColorPicker.scss
+++ b/src/css/common/ColorPicker.scss
@@ -10,6 +10,7 @@
   top: -5px;
   left: -5px;
   width: 360px;
+  z-index: 10;
   -ms-overflow-style: none;
   &::-webkit-scrollbar {
     display: none;
