--- a/src/css/session/SignIn.scss
+++ b/src/css/session/SignIn.scss
@@ -33,6 +33,7 @@
   }
   &__button {
     @include button;
+    background-color: rgb(239, 239, 239);
   }
   &__linkToSignUp {
     align-self: center;
