--- a/src/css/session/SignUp.scss
+++ b/src/css/session/SignUp.scss
@@ -41,6 +41,7 @@
   }
   &__button {
     @include button;
+    background-color: rgb(239, 239, 239);
   }
   &__linkToSignIn {
     align-self: center;
