fix color picker style

--- a/src/css/common/ButtonNoneBorder.scss
+++ b/src/css/common/ButtonNoneBorder.scss
@@ -6,8 +6,8 @@
   color: $font-color;
   cursor: pointer;
   font-size: 0.9rem;
+  min-width: fit-content;
   padding: 5px 10px;
-  width: fit-content;
   &:hover {
     background-color: $card-element-hover-background;
   }
