--- a/src/css/common/FlexTextField.scss
+++ b/src/css/common/FlexTextField.scss
@@ -28,7 +28,7 @@
     height: 100%;
     line-height: 1.2rem;
     outline-color: $pink;
-    padding: 5px;
+    padding-left: 3px;
     position: absolute;
     top: 0;
     left: 0;
