--- a/src/css/common/Loading.scss
+++ b/src/css/common/Loading.scss
@@ -1,6 +1,6 @@
 .loading {
   align-items: center;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.4);
   display: flex;
   justify-content: center;
   position: fixed;
