--- a/src/css/common/Header.scss
+++ b/src/css/common/Header.scss
@@ -8,25 +8,23 @@
   width: 100%;
 }
 
-.headerIcon {
+.toIndexButton {
+  color: white;
   cursor: pointer;
+  font-size: 1.2rem;
   height: 100%;
   line-height: $header-height;
   padding: 0 3px;
+  position: relative;
   width: fit-content;
-  &__toIndex {
-    color: white;
-    font-size: 1.2rem;
-    position: relative;
-    &:hover {
-      color: $pink;
-      &::after {
-        @include hover-text();
-        content: 'ボード一覧に戻る';
-        position: absolute;
-        top: 30px;
-        left: 0;
-      }
+  &:hover {
+    color: $pink;
+    &::after {
+      @include hover-text();
+      content: 'ボード一覧に戻る';
+      position: absolute;
+      top: 30px;
+      left: 0;
     }
   }
 }
