fix check list item name style

--- a/src/css/check_list_item/CheckListItemName.scss
+++ b/src/css/check_list_item/CheckListItemName.scss
@@ -2,6 +2,8 @@
   align-self: stretch;
   flex: 1;
   &__text {
+    align-items: center;
+    display: flex;
     font-size: 0.9rem;
     height: 100%;
     &--checked {
