--- a/src/index.scss
+++ b/src/index.scss
@@ -88,7 +88,9 @@ input::-ms-clear {
 @import './css/common/Header';
 @import './css/common/Lightbox';
 @import './css/common/Loading';
+@import './css/common/Logo';
 @import './css/common/SlideInMenu';
+@import './css/common/TextLink';
 @import './css/common/ToolBar';
 
 // cover
