--- a/src/css/session/SignUp.scss
+++ b/src/css/session/SignUp.scss
@@ -1,28 +1,9 @@
 .signUpContainer {
-  align-items: center;
-  background-color: $background;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: center;
-  width: 100%;
-}
-
-.signUpLogo {
-  color: $font-color;
-  font-size: 2.0rem;
-  letter-spacing: 0.3rem;
-  margin-bottom: 30px;
+  @include session-screen();
 }
 
 .signUp {
-  background-color: #fff;
-  box-shadow: $box-shadow;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  padding: 30px 50px;
-  width: 350px;
+  @include session-container();
   &__usernameTextField {
     @include text-field;
     margin-bottom: 20px;
@@ -43,13 +24,13 @@
     @include button;
     background-color: rgb(239, 239, 239);
   }
-  &__linkToSignIn {
-    align-self: center;
-    color: $font-color;
-    font-size: 0.8rem;
-    margin-top: 30px;
-    &:hover {
-      color: $pink;
-    }
-  }
+}
+
+.signUpLinkContainer {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 3rem;
+  justify-content: space-between;
+  margin-top: 30px;
 }
