implement sign in by test user

--- a/src/index.scss
+++ b/src/index.scss
@@ -128,6 +128,8 @@ input::-ms-clear {
 @import './css/session/SignIn';
 @import './css/session/SignOutButton';
 @import './css/session/SignUp';
+@import './css/session/TesterRow';
+@import './css/session/TesterSignIn';
 @import './css/session/UserProfile';
 @import './css/session/UserProfileButton';
 @import './css/session/UserProfileContainer';
